# math2speech-docs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_extracted_pdf.md  sample_math.md  sample_math.txt
examples/expected_outputs/: sample_math.en.md  sample_math.es.md
src/math2speech_docs/: __init__.py  api.py
src/math2speech_docs/chunking/: chunker.py
src/math2speech_docs/cli/: main.py
src/math2speech_docs/config/: settings.py
src/math2speech_docs/conversion/: postprocess.py  rule_based.py
src/math2speech_docs/detection/: math_detector.py
src/math2speech_docs/evaluation/: metrics.py
src/math2speech_docs/extraction/: markdown.py  pdf.py  text.py
src/math2speech_docs/languages/: en.py  es.py
src/math2speech_docs/llm/: client.py  openai_compatible.py
src/math2speech_docs/prompts/: renderer.py
src/math2speech_docs/prompts/templates/: quality_check.j2  rewrite_chunk.j2  rewrite_document.j2  system_prompt.j2
src/math2speech_docs/tts/: __init__.py  speechify.py  types.py
src/math2speech_docs/types/: models.py
tests/: test_chunking.py  test_cli.py  test_evaluation_metrics.py  test_markdown_loading.py  test_math_detection.py  test_openai_compatible_client.py  test_pdf_extraction.py  test_prompt_renderer.py  test_rule_based_conversion.py  test_speechify_placeholder.py  test_text_loading.py
